--- a/src/components/Map/mapStyles.css
+++ b/src/components/Map/mapStyles.css
@@ -1,3 +1,7 @@
+:root{
+    --delay-time: .1s;
+}
+
 #map {
     height: 400px;
     width: 60%;
@@ -12,4 +16,55 @@
     height: 100%;
     justify-content: center;
     align-items: center;
+}
+
+@keyframes drop {
+    0% {
+        transform: translateY(-200px) scaleY(0.9);
+        opacity: 0;
+    }
+    5% {
+        opacity: 0.7;
+    }
+    50% {
+        transform: translateY(0px) scaleY(1);
+        opacity: 1;
+    }
+    65% {
+        transform: translateY(-17px) scaleY(0.9);
+        opacity: 1;
+    }
+    75% {
+        transform: translateY(-22px) scaleY(0.9);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(0px) scaleY(1);
+        opacity: 1;
+    }
+}
+.drop {
+    animation: drop 0.3s linear forwards var(--delay-time);
+}
+
+#current_location_button {
+    width: 35px;
+}
+
+.ui-button {
+    box-sizing: content-box;
+    background-color: #fff;
+    border: 0;
+    border-radius: 2px;
+    box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+    margin: 10px;
+    padding: 0;
+    overflow: hidden;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+}
+
+.ui-button:hover {
+    background: rgb(235, 235, 235);
 }
