--- a/src/pages/Map/components/MarkersList/markersList.css
+++ b/src/pages/Map/components/MarkersList/markersList.css
@@ -1,14 +1,18 @@
 .markers {
+    height: 400px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    position: relative;
 }
 
 .markers-list {
+    overflow-y: scroll;
     margin: 0;
     padding: 0;
     list-style: none;
+    box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.1);
 }
 
 #add-button {
@@ -26,3 +30,11 @@
     cursor: pointer;
     flex-grow: 1;
 }
+
+
+
+
+
+
+
+
